[gd_scene load_steps=4 format=3 uid="uid://bvy8ymvq7op"]

[ext_resource type="Script" uid="uid://c62l0vmpn6oy4" path="res://Scripts/lab_plant.gd" id="1_u11gg"]
[ext_resource type="FontFile" uid="uid://da2s077s5pm3t" path="res://Assets/Fonts/Hello Note.otf" id="2_jayrj"]
[ext_resource type="Texture2D" uid="uid://c0w51yedhoe30" path="res://icon.svg" id="3_cqctv"]

[node name="LevelPlant" type="Node2D"]
position = Vector2(117, -50)
script = ExtResource("1_u11gg")

[node name="Button" type="Button" parent="."]
offset_right = 97.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("2_jayrj")
theme_override_font_sizes/font_size = 18
text = "Song Name"
metadata/_edit_use_anchors_ = true

[node name="LastScoreLabel" type="Label" parent="Button"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 88.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_jayrj")
text = "Last score"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Historial" type="Button" parent="."]
offset_left = 4.0
offset_top = 71.0
offset_right = 97.0
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("2_jayrj")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Historial"]
layout_mode = 0
offset_right = 90.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("2_jayrj")
theme_override_font_sizes/font_size = 19
text = "Historial"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(-117, 46)
texture = ExtResource("3_cqctv")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="Historial" to="." method="GoToHistorial"]
